Lightbox with vertical alignment, max-height fix

--- a/include/natuive-slider.css
+++ b/include/natuive-slider.css
@@ -34,6 +34,12 @@
 
 }
 
+.slider.lightbox > * {
+
+	vertical-align: middle;
+
+}
+
 .slider::-webkit-scrollbar {
 
     display: none;
